manifest.yaml

apiVersion: v1
kind: Service
metadata:
  name: springboot-k8s-svc
spec:
  type: NodePort
  selector:
    app: spring-boot-k8s
  ports:
   - protocol: TCP
     port: 8080
     name: springboot-k8s-svc-https
     targetPort: 8080
---


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-k8s-ingress
spec:
  tls:
  - hosts:
    - spring-app.maersk-digital.net
    secretName: tls-wildcard-maersk-digital-net

  ingressClassName: nginx
  rules:
  - host: spring-app.maersk-digital.net
    http:
      paths:
      - backend:
          service:
            name: springboot-k8s-svc
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: spring-boot-k8s-network-policy
spec:
  podSelector:
    matchLabels:
      app: spring-boot-k8s
  ingress:
  # Allow web access to the UI
  - ports:
    - port: 8080
  egress:
  - {}
